fixed issue : no search result message not showing

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -141,6 +141,7 @@
 .attractions-container span{
     color: #757575;
     margin: 0 auto;
+    font-size: 18px;
 }
 
 /***************************************/
